syntax = "proto3";

package ihavefood;
import "protoc-gen-openapiv2/options/annotations.proto";
option go_package =  "/genproto";


option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "IHAVEFOOD"
    description: "TODO"
    version: "0.1"
  }
  consumes: "application/json"
  produces: "application/json"

  host: "localhost:9999"
  schemes: HTTP
  schemes: HTTPS

  security_definitions: {
    security: {
      key: "bearer"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Authentication token, prefixed by Bearer: Bearer <token>"
      }
    }
  }

  security: {
    security_requirement: {
      key: "bearer"
    }
  }

};

message Address {
    string address_name = 1;
    string sub_district = 2;
    string district = 3;
    string province = 4;
    string postal_code = 5;
}

message Social {
    string facebook = 1;
    string instagram = 2;
    string line = 3;
}
